# grpc-coin-switcher

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build_grpc.bat  build_yamlcpp.bat
Client/: CMakeLists.txt  Client.cmake  MinerClient.cpp  MinerClient.h  client_config.yaml  main.cpp  main.h
Common/: Common.cmake  Common.h
Proto/: CMakeLists.txt  Proto.cmake  coinswitcher.proto
Server/: 1.bat  2.bat  CMakeLists.txt  MinerControllerImpl.cpp  MinerControllerImpl.h  Server.cmake  c1.bat  c2.bat  main.cpp  server_config.yaml
